# ros1-remote-robot-control

./: LICENSE  README.md
adaptive_circular_slam/: CMakeLists.txt  package.xml
adaptive_circular_slam/launch/: acs_real.launch  acs_sim.launch
adaptive_circular_slam/src/: circle_generator.cpp  circle_scoring.cpp  motion_executor.cpp
learning_cpp/: CMakeLists.txt  package.xml
learning_cpp/launch/: spin_robot.launch
learning_cpp/src/: lidar_listener.cpp  odom_listener.cpp  robot_commander.cpp
motion_client_pkg/: CMakeLists.txt  package.xml
motion_client_pkg/src/: motion_cli.cpp  motion_client.cpp
motion_server_pkg/: CMakeLists.txt  package.xml
motion_server_pkg/launch/: motion_server.launch  system_local.launch
motion_server_pkg/src/: motion_server.cpp
my_robot_msgs/: CMakeLists.txt  package.xml
my_robot_msgs/action/: ExecuteMotion.action
robot_control_app/: CMakeLists.txt  package.xml
robot_control_app/launch/: robot_control_app.launch
robot_control_app/src/: robot_control_app.cpp
