<?xml version="1.0"?>
<package format="2">
  <name>my_robot_msgs</name>
  <version>0.0.0</version>
  <description>The my_robot_msgs package</description>

  <maintainer email="mely@todo.todo">mely</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
