<?xml version="1.0"?>
<package format="2">
  <name>robot_control_app</name>
  <version>0.0.0</version>
  <description>The robot_control_app package</description>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>my_robot_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>my_robot_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
 
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>my_robot_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
